--- a/src/app.html
+++ b/src/app.html
@@ -56,8 +56,8 @@
         </div>
         <footer id="footer" if.bind="! theme.hide_title" ref="theme.footer">
             <div class="footer-area" style="font-size:120%;font-weight:bold;">
-                <span if.bind="user.privileges.TESTER" class="footer-item"><button class="btn btn-default footer-button" click.delegate="create_new_app()">${'user.create-new-app' & t}</button></span>
-                <span if.bind="! user.privileges.TESTER" class="footer-item"><button class="btn btn-default footer-button" click.delegate="contact_us()">Built by Lifestone</button></span>
+                <span if.bind="user.config.expose_new_app_button" class="footer-item"><button class="btn btn-default footer-button" click.delegate="create_new_app()">${'user.create-new-app' & t}</button></span>
+                <span if.bind="! user.config.expose_new_app_button" class="footer-item"><button class="btn btn-default footer-button" click.delegate="contact_us()">Built by Lifestone</button></span>
                 <span style="direction:ltr" class="footer-item">${curr_version}</span>
                 <span class="footer-item"><button class="btn btn-default footer-button" click.delegate="feedback()">${'feedback.feedback' & t}</button></span>
             </div>
