--- a/src/resources/elements/quiz.html
+++ b/src/resources/elements/quiz.html
@@ -3,8 +3,8 @@
         aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: main_filter_toggled(); is-open.bind: filter_menu_open">
         <button class="btn btn-basic btn-lg dropdown-toggle"
             style="padding:5px;height:36px;font-size:90%;margin-top:16px;margin-right:5px;border:solid 1px lightgray;"
-            aubs-dropdown-toggle t="[title]members.filters">
-            ${'members.filters' & t}
+            aubs-dropdown-toggle t="[title]quiz.filters">
+            ${'quiz.filters' & t}
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-right filters">
@@ -15,15 +15,15 @@
                         style="text-decoration:none;position:relative;margin-bottom:10px;width:100%;" aubs-dropdown-toggle>
                         <span style="float:right;display:flex;width:100%;">
                             <i if.bind="q_state==EDITING" class="fas fa-sm fa-pencil"
-                                click.trigger="edit_question(question)"></i>
-                            ${question.question || 'members.new-question' & t}
+                                click.trigger="edit_question(question, $event)"></i>
+                            ${question.prompt || i18n.tr('quiz.new-question')}
                         </span>
                         <span class="caret"></span>
                     </button>
-                    <input if.bind="question.editing_mode" type="text" value.bind="question.question"
-                        t="[placeholder]members.enter-question" blur.trigger="question.editing_mode=false"
-                        keydown.delegate="check_if_cr(question, $event)" />
-                    <ul class="dropdown-menu dropdown-menu-right" style="margin-right:100px;">
+                    <input if.bind="question.editing_mode" type="text" value.bind="question.prompt"
+                        t="[placeholder]quiz.enter-question" blur.delegate="question.editing_mode=false"
+                        keydown.delegate="question_check_if_cr(question, $event)" />
+                    <ul class="dropdown-menu dropdown-menu-right" style="margin-right:100px;" if.bind="question.qid">
                         <li repeat.for="answer of question.answers">
                             <div style="display:flex">
                                 <i if.bind="q_state==EDITING && ! answer.editing_mode" class="fas fa-sm fa-pencil"
@@ -32,11 +32,12 @@
                                 <a if.bind="! answer.editing_mode"
                                     class="dropdown-item ${answer.checked ? 'checked' : ''}" href="#"
                                     click.trigger="apply_answer(question, answer)">
-                                    ${answer.text || 'members.new-option' & t }
+                                    ${answer.text || i18n.tr('quiz.new-option') }
                                 </a>
                                 <input if.bind="answer.editing_mode" type="text" value.bind="answer.text"
-                                    blur.trigger="answer.editing_mode=false"
-                                    keydown.delegate="check_if_cr(question, $event)" />
+                                    t="[placeholder]quiz.enter-option"
+                                    blur.delegate="answer.editing_mode=false"
+                                    keydown.delegate="answer_check_if_cr(question, answer, $event)" />
                             </div>
                         </li>
                     </ul>
