--- a/src/members/members.html
+++ b/src/members/members.html
@@ -52,7 +52,7 @@
                         <div class="input-group" style="padding-top:16px;" if.bind="relatives_mode">
                             <help topic="family-connections" position="bottom"></help>
                         </div>
-                        <quiz if.bind="user.privileges.DEVELOPER" q_state.bind="q_state" name="members"></quiz>
+                        <quiz if.bind="user.privileges.DEVELOPER" q_state.bind="q_state" questions.bind="questions" checked_answers.bind="checked_answers" name="members" q-change.delegate="questions_changed()"></quiz>
                     </div>
                 </div>
             </div>
