--- a/src/resources/elements/quiz.html
+++ b/src/resources/elements/quiz.html
@@ -4,7 +4,7 @@
         <button class="btn btn-basic btn-lg dropdown-toggle"
             style="padding:5px;height:36px;font-size:90%;margin-top:16px;margin-right:5px;border:solid 1px lightgray;"
             aubs-dropdown-toggle t="[title]quiz.filters">
-            ${'quiz.filters' & t}
+            ${main_button_text}
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-right filters">
