--- a/src/admin/access-manager.html
+++ b/src/admin/access-manager.html
@@ -2,18 +2,20 @@
     <require from="./admin.css"></require>
     <div style="height:95%;margin-top:0px;direction:ltr" dir="ltr">
         <div style="width:400px;margin-left:auto;margin-right:auto">
-            <h3 class="center">Access Manager</h3>
+            <h3 class="center">${'admin.access-manager' & t}</h3>
         </div>
         <div style="height:730px;width:1200px;margin-left:auto;margin-right:auto;overflow:auto;">
             <div class="form-inline">
                 <div class="form-group">
-                    <a href class="btn btn-primary" click.delegate="add_or_update()"style="margin-bottom:1em;">Add User</a>
+                    <a href class="btn btn-primary" click.delegate="add_or_update()"style="margin-bottom:1em;">
+                        ${'admin.add-user' & t}
+                    </a>
                 </div>
                 <div class="form-group" style="margin-bottom:14px;">
-                    <input type="text" value.bind="filters[0].value" placeholder="Enter filter text" class="form-control"/>
+                    <input type="text" value.bind="filters[0].value" placeholder="${'admin.enter-filter-text' & t}" class="form-control"/>
                 </div>
                 <select class="form-control" value.bind="filters[1].value" style="margin-bottom:14px;">
-                    <option repeat.for="status of statuses" model.bind="status">${status}</option>
+                    <option repeat.for="status of statuses" value.bind="status">${'admin.' + status & t}</option>
                 </select> 
             </div>
             <table class="table table-striped" 
@@ -23,13 +25,13 @@
                 <thead>
                     <tr>
                         <th aut-sort="key: id">ID</th>
-                        <th aut-sort="key: email">Email</th>
-                        <th aut-sort="key: first_name">First Name</th>
-                        <th aut-sort="key: last_name">Last Name</th>
+                        <th aut-sort="key: email">${'admin.email' & t}</th>
+                        <th aut-sort="key: first_name">${'admin.first-name' & t}</th>
+                        <th aut-sort="key: last_name">${'admin.last-name' & t}</th>
                         <!--<th>Created></th>-->
-                        <th>Privileges</th>
-                        <th>Edit</th>
-                        <th>Delete</th>
+                        <th>${'admin.privileges' & t}</th>
+                        <th>${'admin.edit' & t}</th>
+                        <th>${'admin.delete' & t}</th>
                     </tr>
                 </thead>
                 <tbody style="height:600px;overflow:auto;">
@@ -69,7 +71,8 @@
             <div class="row" style="margin-right:0;">
                 <div class="col-md-9">
                     <aut-pagination current-page.bind="currentPage" page-size.bind="pageSize" total-items.bind="totalItems"
-                                        pagination-size.bind="15" boundary-links.bind="true"> </aut-pagination>
+                        pagination-size.bind="15" boundary-links.bind="true"> 
+                    </aut-pagination>
                 </div>
 
                 <div class="col-md-3">
