--- a/src/resources/elements/quiz.html
+++ b/src/resources/elements/quiz.html
@@ -1,19 +1,18 @@
 <template>
-    <div class="btn-group dropdown"
+    <div class="btn-group dropdown quiz"
         aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: main_filter_toggled(); is-open.bind: filter_menu_open">
         <button class="btn btn-basic btn-lg dropdown-toggle"
-            style="padding:5px;height:36px;font-size:90%;margin-top:16px;margin-right:5px;border:solid 1px lightgray;"
             aubs-dropdown-toggle t="[title]quiz.filters">
             ${main_button_text}
             <span class="caret"></span>
         </button>
-        <ul class="dropdown-menu dropdown-menu-right filters">
+        <ul class="dropdown-menu dropdown-menu-right filters" >
             <li class="dropdown-item" repeat.for="question of questions">
-                <div class="btn-group dropdown border-right" style="padding:0;margin-right:18px;"
+                <div class="btn-group dropdown border-right"
                     aubs-dropdown="auto-close.bind: autoClose; is-open.bind: question.is_open; on-toggle.call: q_toggled(question, $event)">
                     <button class="btn btn-link btn-md dropdown-toggle" if.bind="!question.editing_mode"
                         style="text-decoration:none;position:relative;margin-bottom:10px;width:100%;" aubs-dropdown-toggle>
-                        <span style="float:right;display:flex;width:100%;">
+                        <span style="float:right;display:flex;width:100%;" class="${question.checked} ${question.is_open ? 'open' : ''}">
                             <i if.bind="q_state==EDITING" class="fas fa-sm fa-pencil"
                                 click.trigger="edit_question(question, $event)"></i>
                             ${question.prompt || i18n.tr('quiz.new-question')}
@@ -23,7 +22,7 @@
                     <input if.bind="question.editing_mode" type="text" value.bind="question.prompt"
                         t="[placeholder]quiz.enter-question" blur.delegate="question.editing_mode=false"
                         keydown.delegate="question_check_if_cr(question, $event)" />
-                    <ul class="dropdown-menu dropdown-menu-right" style="margin-right:100px;" if.bind="question.qid">
+                    <ul class="dropdown-menu dropdown-menu-right answers" style="padding-right:6px;min-width:180px;" if.bind="question.qid">
                         <li repeat.for="answer of question.answers">
                             <div style="display:flex">
                                 <i if.bind="q_state==EDITING && ! answer.editing_mode" class="fas fa-sm fa-pencil"
