--- a/src/resources/elements/quiz.html
+++ b/src/resources/elements/quiz.html
@@ -12,12 +12,12 @@
                     aubs-dropdown="auto-close.bind: autoClose; is-open.bind: question.is_open; on-toggle.call: q_toggled(question, $event)">
                     <button class="btn btn-link btn-md dropdown-toggle" if.bind="!question.editing_mode"
                         style="text-decoration:none;position:relative;margin-bottom:10px;width:100%;" aubs-dropdown-toggle>
-                        <span style="float:right;display:flex;width:100%;" class="${question.checked} ${question.is_open ? 'open' : ''}">
+                        <span class="question ${question.checked} ${question.is_open ? 'open' : ''}">
                             <i if.bind="q_state==EDITING" class="fas fa-sm fa-pencil"
                                 click.trigger="edit_question(question, $event)"></i>
                             ${question.prompt || i18n.tr('quiz.new-question')}
                         </span>
-                        <span class="caret"></span>
+                        <span class="caret" class="${theme.rtltr} anti"></span>
                     </button>
                     <input if.bind="question.editing_mode" type="text" value.bind="question.prompt"
                         t="[placeholder]quiz.enter-question" blur.delegate="question.editing_mode=false"
