--- a/src/home/home.html
+++ b/src/home/home.html
@@ -67,7 +67,7 @@
                 ${member_of_the_day_life_cycle_text}
             </span>
             <span class="member-link" click.delegate="jump_to_member_of_the_day_page(member_of_the_day.id)">
-                ${'home.to-the-page-of' & t} ${member_of_the_day.first_name}
+                ${'home.to-the-page-of' & t} ${member_of_the_day.short_name}
             </span>
         </div>
     </div>
