--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -88,6 +88,9 @@
                     </div>
                     <label class="control-label col-md-6" style="padding-right:0;" >${'members.cause-of-death' & t}</label>
                 </div>
+                <div class="form-group">
+                    <input type="text" class="form-control" id="title" t="[placeholder]members.title" value.bind="member.member_info.title">
+                </div>
             </div>
             <!--The right wing of the form-->
             <div class="col-md-6 member-info-right">
