--- a/src/members/members.html
+++ b/src/members/members.html
@@ -55,10 +55,15 @@
                         <quiz if.bind="user.privileges.TESTER" 
                             q_state.bind="q_state" 
                             questions.bind="questions" 
+                            to_clear_now.bind="to_clear_now"
                             checked_answers.bind="checked_answers" 
                             name="members" 
                             q-change.delegate="questions_changed($event)">
                         </quiz>
+                        <button if.bind="changes_pending" class="btn btn-basic btn-lg" click.delegate="apply_changes()" 
+                            style="height:36px;margin-top:16px;font-size:small;border:1px solid lightgray">
+                            ${'members.apply-answers' & t}
+                        </button>
                     </div>
                 </div>
             </div>
