--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -1,4 +1,4 @@
-<template class="multi-select">
+<template class="multi-select" dir="${theme.rtltr}">
     <require from="./multi-select.css">
     </require>
     <div class="input-group search-filter" if.bind="options.length > 0">
@@ -19,7 +19,7 @@
         <!-- list of selected options -->
         <div class="row options selected">
             <div show.bind="clear_selections" ></div>
-            <ul css="padding-right:0;max-height:${settings.height_selected}px;overflow:auto;" ref="scroll_area">
+            <ul css="padding-right:0;max-height:${settings.height_selected}px;overflow:auto;" ref="scroll_area" class="${theme.rtltr}">
                 <li repeat.for="item of selected_options" class="${item.group_number % 2 ? 'odd-group' : 'even-group'}">
                     <div class="option-item" css="margin:0;padding:0;width:${inner_width}px;width:100%;height:24px;position:relative;">
                         <!-- lock/unlock button -->
@@ -66,10 +66,10 @@
         </div>
 
         <!-- unselected options -->
-        <div class="row options unselected" 
-            css="max-height:${option_list_height}px;;min-height:132px;" 
+        <div class="row options unselected ${theme.rtltr}" 
+            css="max-height:${option_list_height}px;min-height:132px;" 
             if.bind="options && options.length > 0 && (filter.length > 0 || (! settings.show_only_if_filter)) ">
-            <ul css="width:${width}px;" if.bind="true || unselected_options===[]">
+            <ul css="width:${width}px;padding-left:20px;" if.bind="true || unselected_options===[]">
                 <li repeat.for="option of options | filter: filter : 'name' | filterBySet : selected_options_set : 'exclude' : 'name' | take : 999">
                     <div class="option-item" css="margin:0;padding:0;padding-right:2px;width:${inner_width}px" if.bind="option.topic_kind!=1 || ! hide_higher">
                         <a click.delegate="select_option(option)" class.bind="'option-kind-' + option.topic_kind">${option.name}</a>
