--- a/src/resources/elements/quiz.html
+++ b/src/resources/elements/quiz.html
@@ -1,7 +1,7 @@
 <template>
     <div class="btn-group dropdown quiz"
         aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: main_filter_toggled(); is-open.bind: filter_menu_open">
-        <button class="btn btn-basic btn-lg dropdown-toggle"
+        <button class="btn btn-basic btn-lg dropdown-toggle ${dirty}"
             aubs-dropdown-toggle t="[title]quiz.filters">
             ${main_button_text}
             <span class="caret"></span>
@@ -24,18 +24,18 @@
                         keydown.delegate="question_check_if_cr(question, $event)" />
                     <ul class="dropdown-menu dropdown-menu-right answers" style="padding-right:6px;min-width:180px;" if.bind="question.qid">
                         <li repeat.for="answer of question.answers">
-                            <div style="display:flex">
+                            <div style="display:flex" class="${answer.checked ? 'checked' : ''}">
                                 <i if.bind="q_state==EDITING && ! answer.editing_mode" class="fas fa-sm fa-pencil"
                                     style="float:right" click.trigger="edit_answer(answer)">
                                 </i>
                                 <a if.bind="! answer.editing_mode"
-                                    class="dropdown-item ${answer.checked ? 'checked' : ''}" href="#"
+                                    class="dropdown-item" href="#"
                                     click.trigger="apply_answer(question, answer)">
                                     ${answer.text || i18n.tr('quiz.new-option') }
                                 </a>
                                 <input if.bind="answer.editing_mode" type="text" value.bind="answer.text"
                                     t="[placeholder]quiz.enter-option"
-                                    blur.delegate="answer.editing_mode=false"
+                                    blur.delegate="answer_blurred(question, answer)"
                                     keydown.delegate="answer_check_if_cr(question, answer, $event)" />
                             </div>
                         </li>
@@ -45,5 +45,6 @@
         </ul>
     </div>
     <span show.bind="false">${dummy}</span>
+    <span show.bind="false">${clear_now}</span>
 
 </template>
