--- a/src/resources/elements/quiz/quiz.html
+++ b/src/resources/elements/quiz/quiz.html
@@ -8,7 +8,7 @@
             <span class="caret"></span>
         </button>
         <ul class="dropdown-menu dropdown-menu-right filters" >
-            <li class="dropdown-item" repeat.for="question of questions">
+            <li class="dropdown-item" repeat.for="question of questions" title.bind="question.description">
                 <div class="btn-group dropdown border-right"
                     aubs-dropdown="auto-close.bind: autoClose; is-open.bind: question.is_open; on-toggle.call: q_toggled(question, $event)">
                     <button class="btn btn-link btn-md dropdown-toggle" if.bind="!question.editing_mode"
@@ -21,7 +21,7 @@
                         <span class="caret" class="${theme.rtltr} anti"></span>
                     </button>
                     <ul class="dropdown-menu dropdown-menu-right answers" style="padding-right:6px;min-width:180px;" if.bind="question.qid">
-                        <li repeat.for="answer of question.answers">
+                        <li repeat.for="answer of question.answers" title.bind="answer.description">
                             <div style="display:flex" class="${answer.checked ? 'checked' : ''}">
                                 <i if.bind="q_state==EDITING && ! answer.editing_mode" class="fas fa-sm fa-pencil"
                                     style="float:right" click.trigger="edit_answer(question, answer)">
