--- a/src/resources/elements/quiz/quiz.html
+++ b/src/resources/elements/quiz/quiz.html
@@ -1,12 +1,16 @@
 <template>
     <div class="btn-group dropdown quiz"
         aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: main_filter_toggled(); is-open.bind: filter_menu_open">
-        <button class="btn btn-basic btn-lg dropdown-toggle ${dirty}"
-            if.bind="to_show_menu"
-            aubs-dropdown-toggle t="[title]quiz.filters">
-            ${main_button_text}
-            <span class="caret"></span>
-        </button>
+        <div style="display:flex">
+            <button class="btn btn-basic btn-lg dropdown-toggle ${dirty}"
+                if.bind="to_show_menu"
+                aubs-dropdown-toggle t="[title]quiz.filters">
+                ${main_button_text}
+                <span class="caret"></span>
+            </button>
+            <help topic="using-quiz" style="margin-top:18px;" if.bind="q_state==USING"></help>
+            <help topic="editing-quiz" style="margin-top:18px;" if.bind="q_state!=USING"></help>
+        </div>
         <ul class="dropdown-menu dropdown-menu-right filters" >
             <li class="dropdown-item" repeat.for="question of questions" title.bind="question.description">
                 <div class="btn-group dropdown border-right"
